added translations sources

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,12 +5,12 @@
         <h1 class="display-3 h1-responsive">Schicht-Plan.ch</h1>
         <h6 class="h6-responsive">{% trans %}home_description{% endtrans %} <a href="https://schichtplan.immerda.ch">schichtplan.immerda.ch</a></h6>
         <br>
-        <h5>Features</h5>
+        <h5>{% trans %}features{% endtrans %}</h5>
         <p>
             <ul class="list-index">
-                <li>Öffentliche oder private Vorlagen erstellen</li>
-                <li>Plankollektionen (Gruppieren von mehreren Schichtplänen)</li>
-                <li>Wähle beim Einschreiben einen öffentlichen und einen privaten Anzeigenamen</li>
+                <li>{% trans %}home_first_bullet{% endtrans %}</li>
+                <li>{% trans %}home_second_bullet{% endtrans %}</li>
+                <li>{% trans %}home_third_bullet{% endtrans %}</li>
             </ul>
         </p>
         <hr>
