center user profile and added tests for preloading on edit

--- a/src/AppBundle/Resources/public/css/general.css
+++ b/src/AppBundle/Resources/public/css/general.css
@@ -38,3 +38,8 @@ textarea {
     margin-left: 2.5rem;
     list-style-type: circle;
 }
+
+.fos_user_user_show {
+    float: none;
+    margin: 0 auto;
+}
