--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -66,6 +66,7 @@
                         <li class="nav-item text-nowrap"><a class="nav-link" href="{{ path('fos_user_registration_register') }}"><i class="fa fa-user-plus" aria-hidden="true"></i> {% trans %}register{% endtrans %}</a></li>
                     {% endif %}
                     <li class="nav-item text-nowrap"><a class="nav-link" href="{{ path('about') }}"><i class="fa fa-question-circle-o" aria-hidden="true"></i> {{ 'about'|trans }}</a></li>
+                    <li class="nav-item text-nowrap"><a class="nav-link" href="{{ path('changelog') }}"><i class="fa fa-terminal" aria-hidden="true"></i> {% trans %}changelog{% endtrans %}</a></li>
                 </ul>
             </div>
         </nav>
