--- a/app/Resources/views/default/changelog.html.twig
+++ b/app/Resources/views/default/changelog.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Releases</h2>
+    <h1>{% trans %}releases{% endtrans %}</h1>
+    <br>
     {% for release in releases  %}
         {% if not release.draft  %}
         <div class="col-12">
