added more feature desc and fixed bug on changelog page

--- a/app/Resources/views/default/changelog.html.twig
+++ b/app/Resources/views/default/changelog.html.twig
@@ -18,7 +18,7 @@
                 {% endif %}
             {% endfor  %}
             <div class="alert alert-info">
-                {% trans %}releases{% endtrans %}
+                {% trans %}release_further_info{% endtrans %}
             </div>
         {% else %}
             <div class="alert alert-danger">
