--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -11,6 +11,7 @@
                 <li>{% trans %}home_first_bullet{% endtrans %}</li>
                 <li>{% trans %}home_second_bullet{% endtrans %}</li>
                 <li>{% trans %}home_third_bullet{% endtrans %}</li>
+                <li>{% trans %}home_fourth_bullet{% endtrans %}</li>
             </ul>
         </p>
         <hr>
