--- a/templates/form/form_errors.html.twig
+++ b/templates/form/form_errors.html.twig
@@ -1,4 +1,8 @@
+{% form_theme form _self %}
+
 {% block form_errors -%}
+    {% spaceless %}
+
     {% if errors|length > 0 -%}
         <div class="alert alert-danger">
             {%- for error in errors -%}
@@ -6,4 +10,5 @@
             {%- endfor -%}
         </div>
     {%- endif %}
+        {% endspaceless %}
 {%- endblock form_errors %}
