reintroduce style and js customizations

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/social-share-kit/1.0.14/css/social-share-kit.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/transition.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/dropdown.min.css" />
+        <link rel="stylesheet" href="/css/general.css" />
+        <link rel="stylesheet" href="/css/plan.css" />
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.png') }}" />
     </head>
@@ -94,7 +96,14 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/social-share-kit/1.0.14/js/social-share-kit.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/transition.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/dropdown.min.js"></script>
-        <script src="{{ url('bazinga_jstranslation_js') }}"></script>
+        <script src="/js/add-shifts.js"></script>
+        <script src="/js/clock-picker.js"></script>
+        <script src="/js/datepicker.js"></script>
+        <script src="/js/global.js"></script>
+        <script src="/js/new-template.js"></script>
+        <script src="/js/plan-password.js"></script>
+        <script src="/js/translator.min.js"></script>
+        <script src="/js/jquery.ui.touch-punch.min.js"></script>
         <!-- Piwik -->
         <script type="text/javascript">
             var _paq = _paq || [];
